k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: webapp-deployment
spec:
 replicas: 2
 selector:
  matchLabels:
   component: web
 template:
  metadata:
   labels:
    component: web
  spec:
   containers:
    - name: testweb
      image: noneedrelax/testweb:idfc
      ports: 
       - containerPort: 8080
