k8s/client-node-port.yml
apiVersion: v1
kind: Service
metadata:
 name: client-node-port
spec:
 type: NodePort
 ports:
  - port: 3050
    targetPort: 8080
    nodePort: 31515
 selector: 
  component: web
